find_library(ALSA_LIBRARY alsa)

set(AAIOLIB aaio)

add_subdirectory(cdp2k)
add_subdirectory(newsfsys)
add_subdirectory(pvxio2)
add_subdirectory(blur)
add_subdirectory(cdparams)
add_subdirectory(cdparams_other)
add_subdirectory(cdparse)
add_subdirectory(combine)
add_subdirectory(distort)
add_subdirectory(editsf)
add_subdirectory(env)
add_subdirectory(extend)
add_subdirectory(filter)
add_subdirectory(focus)
add_subdirectory(formants)
add_subdirectory(grain)
add_subdirectory(hfperm)
add_subdirectory(hilite)
add_subdirectory(houskeep)
add_subdirectory(misc)
add_subdirectory(modify)
add_subdirectory(morph)
add_subdirectory(new)
add_subdirectory(pagrab)
add_subdirectory(paview)
add_subdirectory(pitch)
add_subdirectory(pitchinfo)
add_subdirectory(pv)
add_subdirectory(pview)
add_subdirectory(repitch)
add_subdirectory(sfutils)
add_subdirectory(sndinfo)
add_subdirectory(spec)
add_subdirectory(specinfo)
add_subdirectory(standalone)
add_subdirectory(strange)
add_subdirectory(stretch)
add_subdirectory(submix)
add_subdirectory(synth)
add_subdirectory(tabedit)
add_subdirectory(texture)
add_subdirectory(standnew)
add_subdirectory(science)
add_subdirectory(externals)

